--- a/mod/dar/dar.css
+++ b/mod/dar/dar.css
@@ -1,3 +1,7 @@
+.checkBox label{
+    text-align: left !important;
+    width: 12em !important;
+}
 
 .long label{
     width: 32em !important;
@@ -40,7 +44,7 @@ div.callout {
 	border: 1px solid #333;
 	text-shadow: 0 0 1px #000;
     z-index: 5;
-    right: 70px;
+    right: 410px;
 
 	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
 }
