--- a/mod/dar/dar.css
+++ b/mod/dar/dar.css
@@ -4,7 +4,13 @@
 }
 
 .long label{
+    text-align: left !important;
     width: 32em !important;
+}
+
+.mid label{
+    text-align: left !important;
+    width: 17em !important;
 }
 
 .marks label{
@@ -15,6 +21,11 @@
 .marks input{
     float: right !important;
     width:50px;
+}
+
+#vector_type{
+    position: absolute;
+    left: 18.5em;
 }
 
 
@@ -32,10 +43,10 @@ div.callout {
 
 div.callout {
     cursor:pointer;
-	background-color: #444;
+	background-color: #000;
 	background-image: -moz-linear-gradient(top, #444, #444);
 	position: absolute;
-	color: #ccc;
+	color: #FFF;
 	padding: 10px;
 	border-radius: 3px;
 	box-shadow: 0px 0px 20px #999;
@@ -44,7 +55,7 @@ div.callout {
 	border: 1px solid #333;
 	text-shadow: 0 0 1px #000;
     z-index: 5;
-    right: 410px;
+    right: 76px;
 
 	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
 }
