finished hazard assessment added auto calculations

--- a/mod/pa/pa.css
+++ b/mod/pa/pa.css
@@ -3,17 +3,20 @@
     width: 1em !important;
 }
 
-#pa, #drill
-{
+#pa, #drill{
     text-align: left !important;
     width: 4em !important;
 }
 
-#pa_date, #drill_date
-{
+#pa_date, #drill_date{
     margin: 3px;
 }
- #emp
- {
+
+#emp{
      text-align: left;
- }
+}
+
+#t_landslide, #t_tsunami, #t_drought, #t_cyclones, #t_flood{
+    text-align: center !important;
+}
+
