--- a/mod/pa/pa.css
+++ b/mod/pa/pa.css
@@ -20,3 +20,9 @@
     text-align: center !important;
 }
 
+fieldset{
+    height: none !important;
+    min-height: none !important;
+    min-width: none !important;
+}
+
