--- a/mod/dar/dar.css
+++ b/mod/dar/dar.css
@@ -48,10 +48,10 @@ div.callout {
 
 div.callout {
     cursor:pointer;
-	background-color: #000;
+    background-color: #F5FF00;;
 	background-image: -moz-linear-gradient(top, #444, #444);
 	position: absolute;
-	color: #FFF;
+    color: #000;
 	padding: 10px;
 	border-radius: 3px;
 	box-shadow: 0px 0px 20px #999;
@@ -60,9 +60,8 @@ div.callout {
 	border: 1px solid #333;
 	text-shadow: 0 0 1px #000;
     z-index: 5;
-    right: 76px;
-
-	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
+    right: 406px;
+    text-shadow: none;
 }
 
 .callout::before {
